--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "dependencies": {
     "bootstrap": "4.0.0-beta.3",
+    "chart.js": "^2.7.1",
+    "ionicons": "^3.0.0",
     "react": "^16.2.0",
+    "react-chartjs-2": "^2.6.4",
     "react-dom": "^16.2.0",
     "react-scripts-ts": "2.8.0"
   },
@@ -19,6 +22,7 @@
     "watch-css": "npm run build-css && ./node_modules/.bin/node-sass-chokidar src/styles/scss -o src/styles/css --watch --recursive"
   },
   "devDependencies": {
+    "@types/chart.js": "^2.7.3",
     "@types/jest": "^22.0.1",
     "@types/node": "^8.5.6",
     "@types/react": "^16.0.34",
