--- a/package.json
+++ b/package.json
@@ -3,23 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "4.0.0-beta.3",
+    "bootstrap": "4.0.0",
     "chart.js": "^2.7.1",
     "ionicons": "^3.0.0",
     "react": "^16.2.0",
     "react-chartjs-2": "^2.6.4",
     "react-dom": "^16.2.0",
-    "react-scripts-ts": "2.8.0"
+    "react-scripts-ts": "2.14.0",
+    "react-waypoint": "^7.3.4"
   },
   "scripts": {
     "start-js": "react-scripts-ts start",
     "start": "npm-run-all -p watch-css start-js",
-    "build-js": "react-scripts build",
+    "build-js": "react-scripts-ts build",
     "build": "npm-run-all build-css build-js",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject",
-    "build-css": "./node_modules/.bin/node-sass-chokidar src/styles/scss -o src/styles/css",
-    "watch-css": "npm run build-css && ./node_modules/.bin/node-sass-chokidar src/styles/scss -o src/styles/css --watch --recursive"
+    "build-css":
+      "./node_modules/.bin/node-sass-chokidar src/styles/scss -o src/styles/css",
+    "watch-css":
+      "npm run build-css && ./node_modules/.bin/node-sass-chokidar src/styles/scss -o src/styles/css --watch --recursive"
   },
   "devDependencies": {
     "@types/chart.js": "^2.7.3",
@@ -32,6 +35,7 @@
     "prettier": "^1.9.2",
     "tslint": "^5.8.0",
     "tslint-config-prettier": "^1.6.0",
-    "tslint-plugin-prettier": "^1.3.0"
+    "tslint-plugin-prettier": "^1.3.0",
+    "typescript": "^2.8.1"
   }
 }
