--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,15 @@
-version: '3.1'
+version: '3.5'
 
 services:
-  app:
+
+  react-app:
     build:
       context: .
-      args:
-        - NODE_ENV=production
+      dockerfile: Dockerfile
+    volumes:
+      - '.:/usr/src/app'
+      - '/usr/src/app/node_modules'
+    ports:
+      - '5000:80'
+    environment:
+      - NODE_ENV=development
