--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,4 +12,4 @@ jobs:
      - run: docker build -t krystof/homepage:$CIRCLE_BRANCH .
 
      # deploy the image
-     - run: docker push company/homepage:$CIRCLE_BRANCH
+     - run: docker push krystof/homepage:$CIRCLE_BRANCH
