--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "4.0.0",
+    "@types/react-modal": "^3.8.1",
+    "bootstrap": "4.3.1",
     "chart.js": "^2.7.1",
-    "ionicons": "^3.0.0",
+    "ionicons": "^4.5.5",
     "react": "^16.2.0",
+    "react-app-polyfill": "^0.2.2",
     "react-chartjs-2": "^2.6.4",
     "react-dom": "^16.2.0",
-    "react-scripts-ts": "2.14.0",
-    "react-waypoint": "^7.3.4"
+    "react-modal": "^3.8.1",
+    "react-scripts-ts": "3.1.0",
+    "react-waypoint": "^9.0.1"
   },
   "scripts": {
     "start-js": "react-scripts-ts start",
@@ -24,16 +27,16 @@
   },
   "devDependencies": {
     "@types/chart.js": "^2.7.3",
-    "@types/jest": "^22.0.1",
-    "@types/node": "^8.5.6",
+    "@types/jest": "^24.0.11",
+    "@types/node": "^11.11.3",
     "@types/react": "^16.0.34",
     "@types/react-dom": "^16.0.3",
-    "node-sass-chokidar": "^0.0.3",
+    "node-sass-chokidar": "^1.3.4",
     "npm-run-all": "^4.1.2",
     "prettier": "^1.9.2",
     "tslint": "^5.8.0",
     "tslint-config-prettier": "^1.6.0",
-    "tslint-plugin-prettier": "^1.3.0",
-    "typescript": "^2.8.1"
+    "tslint-plugin-prettier": "^2.0.1",
+    "typescript": "^3.3.3333"
   }
 }
