--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,15 +1,18 @@
-version: 2
-jobs:
- build:
-   machine: true
-   steps:
-     - checkout
-     # start proprietary DB using private Docker image
-     # with credentials stored in the UI
-     - run: docker login -u $DOCKER_USER -p $DOCKER_PASS
+version: 2.1
 
-     # build the application image
-     - run: docker build -t krystof/homepage:$CIRCLE_BRANCH .
+orbs:
+  react: thefrontside/react@0.1.0
 
-     # deploy the image
-     - run: docker push krystof/homepage:$CIRCLE_BRANCH
+workflows:
+  push:
+    jobs:
+      - react/install
+      - react/eslint:
+          requires:
+            - react/install
+      - react/stylelint:
+          requires:
+            - react/install
+      - react/test:
+          requires:
+            - react/install
