--- a/package.json
+++ b/package.json
@@ -23,17 +23,29 @@
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject",
     "build-css": "./node_modules/.bin/node-sass-chokidar src/styles/scss -o src/styles/css",
-    "watch-css": "npm run build-css && ./node_modules/.bin/node-sass-chokidar src/styles/scss -o src/styles/css --watch --recursive"
+    "watch-css": "npm run build-css && ./node_modules/.bin/node-sass-chokidar src/styles/scss -o src/styles/css --watch --recursive",
+    "eslint": "eslint './src/**/*.{ts,tsx}'",
+    "stylelint": "stylelint \"src/**/*.scss\""
   },
   "devDependencies": {
     "@types/chart.js": "^2.7.3",
     "@types/jest": "^24.0.11",
     "@types/node": "^11.11.3",
-    "@types/react": "^16.0.34",
+    "@types/react": "^16.8.23",
     "@types/react-dom": "^16.0.3",
+    "@typescript-eslint/eslint-plugin": "^1.13.0",
+    "@typescript-eslint/parser": "^1.13.0",
+    "eslint": "^6.1.0",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-config-react": "^1.1.7",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.14.3",
     "node-sass-chokidar": "^1.3.4",
     "npm-run-all": "^4.1.2",
-    "prettier": "^1.9.2",
+    "prettier": "^1.18.2",
+    "stylelint": "^10.1.0",
+    "stylelint-config-standard": "^18.3.0",
+    "stylelint-junit-formatter": "^0.2.1",
     "tslint": "^5.8.0",
     "tslint-config-prettier": "^1.6.0",
     "tslint-plugin-prettier": "^2.0.1",
