--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,7 @@
         "browser": true,
         "jasmine": true,
         "jest": true,
-        "node": true,
+        "node": true
     },
     "rules": {
         "prettier/prettier": ["error", {
